--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <div class="container">
       <h1>Click on the Icon.</h1>
-      <img src="moon.png" alt="moon" />
+      <img src="moon.png" alt="moon" id="hero" />
+      <div class="text" id="welcomeMsg"></div>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
