feat: added preloader to the page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,31 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="preloader"></div>
     <div class="container">
       <h1>Click on the Icon.</h1>
       <img src="moon.png" alt="moon" id="hero" />
       <div class="text" id="welcomeMsg"></div>
+
+      <h2>Best JavaScript Tutorial Videos</h2>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/pN6jk0uUrD8"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/ZvbzSrg0afE"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
     </div>
     <script src="app.js"></script>
   </body>
